# cpc464-addon-box-software-stm32

./: openocd-stm32.cfg  openocd-xcf.cfg
stm32/: CMakeLists.txt  CodeSourcery.cmake  Doxyfile.in  assert.c  bits.h  cppsupport.cpp  dsk.cpp  dsk.hpp  fat.cpp  fat.h  fdc.cpp  fdc.h  font.c  font.h  fpga_comm.c  fpga_comm.cpp  fpga_comm.h  irq.h  licenses.txt  link.ld  main.cpp  msd.cpp  msd.h  refcounted.hpp  sdcard.c  sdcard.cpp  sdio.c  sdio.h  sprite.h  stm32f4xx_conf.h  syscalls.c  syscallscommon.c  syscallscpp.cpp  system_stm32f4xx.c  test.cpp  tester.cpp  timer.cpp  timer.h  usb.cpp  vfs.hpp
stm32/ext/libsigc++-2.10.0/: README  sigc++config.h
stm32/ext/libsigc++-2.10.0/sigc++/: connection.cc  connection.h  signal_base.cc  signal_base.h  trackable.cc
stm32/ext/libsigc++-2.10.0/sigc++/functors/: slot_base.cc  slot_base.h
stm32/icons/: disks.xcf  joysticks.xcf  lpen.xcf  mouse.xcf  settings.xcf
stm32/include/: bits.h  deferredwork.hpp  eventlogger.hpp  irq.h  joyport.hpp  joystick.hpp  keyboard.hpp  lang.hpp  mouse.h  mouse.hpp  refcounted.hpp  timer.h  timer.hpp  usbdevicenotify.h
stm32/include/block/: msd.h  msd.hpp  sdcard.h  sdio.h  sdio.hpp
stm32/include/bsp/: core_cm4.h  core_cmFunc.h  stm32f4xx.h
stm32/include/fdc/: dsk.hpp  fdc.h
stm32/include/fpga/: font.h  fpga_comm.h  fpga_comm.hpp  fpga_uploader.hpp  layout.h  sprite.h  sprite.hpp
stm32/include/fs/: vfs.hpp
stm32/include/hw/: fpga.h  led.h  sd.h
stm32/include/input/: input.hpp  usbhid.h
stm32/include/sys/: dirent.h  info.h  mprot.h
stm32/include/ui/: iconbar.h  icons.hpp  notify.hpp  ui.hpp
stm32/include/usb/: urb.hpp  usb.h  usb.hpp  usbdevice.hpp  usbendpoint.hpp  usbproto.h
stm32/include/usbproto/: hid.h  hub.h  usb.h
stm32/src/: eventlogger.cpp  joyport.cpp  joystick.cpp  keyboard.cpp  lang.cpp  main.cpp  mouse.cpp  refcounted.cpp  tester.cpp  timer.cpp  usbdevicenotify.cpp
stm32/src/block/: msd.cpp  sdcard.cpp  sdcard_std.h  sdio.c  sdio.cpp
stm32/src/bsp/: misc.c  stm32f4xx_adc.c  stm32f4xx_can.c  stm32f4xx_crc.c  stm32f4xx_cryp.c  stm32f4xx_cryp_aes.c  stm32f4xx_cryp_des.c  stm32f4xx_cryp_tdes.c  stm32f4xx_dac.c  stm32f4xx_dbgmcu.c  stm32f4xx_dcmi.c  stm32f4xx_dma.c  stm32f4xx_dma2d.c  stm32f4xx_exti.c  stm32f4xx_flash.c  stm32f4xx_fsmc.c  stm32f4xx_gpio.c  stm32f4xx_hash.c  stm32f4xx_hash_md5.c  stm32f4xx_hash_sha1.c  stm32f4xx_i2c.c  stm32f4xx_iwdg.c  stm32f4xx_ltdc.c  stm32f4xx_pwr.c  stm32f4xx_rcc.c  stm32f4xx_rng.c  stm32f4xx_rtc.c  stm32f4xx_sai.c  stm32f4xx_sdio.c  stm32f4xx_spi.c  stm32f4xx_syscfg.c  stm32f4xx_tim.c  stm32f4xx_usart.c  stm32f4xx_wwdg.c  system_stm32f4xx.c
stm32/src/fdc/: dsk.cpp  fdc.cpp
stm32/src/fpga/: font.c  font.cpp  fpga_comm.cpp  sprite.cpp
stm32/src/fs/: fat.cpp
stm32/src/input/: input.cpp  usbhid.cpp  usbhidproto.h
stm32/src/sys/: assert.c  cppsupport.cpp  mprot.cpp  syscallscommon.c  syscallscpp.cpp  syscallstester.c
stm32/src/ui/: button.cpp  controls.cpp  controls.hpp  fileselect.cpp  fileselect.hpp  frame.cpp  frame.hpp  hint.cpp  hint.hpp  iconbar.cpp  iconbar_control.cpp  iconbar_control.hpp  iconbar_diskmenu.cpp  iconbar_diskmenu.hpp  iconbar_joystickmenu.cpp  iconbar_joystickmenu.hpp  iconbar_settingsmenu.cpp  iconbar_settingsmenu.hpp  icons.cpp  icons.hpp  input.cpp  input.hpp  label.cpp  listbox.cpp  listbox.hpp  meminfo.cpp  meminfo.hpp  menu.cpp  menu.hpp  notify.cpp  panel.cpp  scrollbar.cpp  scrollbar.hpp  settings.cpp  settings.hpp  ui.cpp  videosettings.cpp  videosettings.hpp
stm32/src/usb/: usb.cpp  usbchannel.cpp  usbchannel.hpp  usbdev.h  usbdevice.cpp  usbdevice.hpp  usbendpoint.hpp  usbhub.cpp  usbhub.h  usbpriv.hpp
