project(STM32)
cmake_minimum_required(VERSION 2.6)

#needs to be set from outside to work
#set(CMAKE_TOOLCHAIN_FILE  CodeSourcery.cmake)

set(COMPILE_DEFINITIONS_DEBUG    -O1 -ggdb)
set(COMPILE_DEFINITIONS_RELEASE  -O1)

#macro for stripping executables to flashable image
macro(OBJCOPY_FILE EXE_NAME)
 set(FO ${CMAKE_CURRENT_BINARY_DIR}/${EXE_NAME}.bin)
 set(FI ${CMAKE_CURRENT_BINARY_DIR}/${EXE_NAME})
 message(STATUS ${FO})
 add_custom_command(
  OUTPUT "${FO}"
  COMMAND ${CMAKE_OBJCOPY}
  ARGS -O binary ${FI} ${FO}
  DEPENDS ${FI})
 get_filename_component(TGT "${EXE_NAME}" NAME)
 add_custom_target("TargetObjCopy_${TGT}" ALL DEPENDS ${FO} VERBATIM)
 get_directory_property(extra_clean_files ADDITIONAL_MAKE_CLEAN_FILES)
 set_directory_properties(
  PROPERTIES
  ADDITIONAL_MAKE_CLEAN_FILES "${extra_clean_files};${FO}")
 set_source_files_properties("${FO}" PROPERTIES GENERATED TRUE)
endmacro(OBJCOPY_FILE)

add_definitions(
  -DSTM32F40_41xxx -DUSE_STDPERIPH_DRIVER -DUSE_FULL_ASSERT
  -DHSE_VALUE=16000000
  )

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -fno-unwind-tables -fno-common -fno-exceptions -fno-rtti -O2 -ggdb -fdata-sections -ffunction-sections -std=c++11"
  )

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -fno-unwind-tables -fno-common -fno-exceptions -O2 -ggdb -fdata-sections -ffunction-sections"
  )

function(enable_unity_build UB_SUFFIX SOURCE_VARIABLE_NAME)
  set(files ${${SOURCE_VARIABLE_NAME}})
  # Generate a unique filename for the unity build translation unit
  set(unit_build_file ${CMAKE_CURRENT_BINARY_DIR}/ub_${UB_SUFFIX}.cpp)
  # Exclude all translation units from compilation
  set_source_files_properties(${files} PROPERTIES HEADER_FILE_ONLY true)
  # Open the ub file
  FILE(WRITE ${unit_build_file} "// Unity Build generated by CMake\n")
  # Add include statement for each translation unit
  foreach(source_file ${files} )
    if("${source_file}" MATCHES "\\.c$")
      FILE( APPEND ${unit_build_file} "extern \"C\" { \n")
      FILE( APPEND ${unit_build_file} "#include <${CMAKE_CURRENT_SOURCE_DIR}/${source_file}>\n")
      FILE( APPEND ${unit_build_file} "}\n")
    else()
      FILE( APPEND ${unit_build_file} "#include <${CMAKE_CURRENT_SOURCE_DIR}/${source_file}>\n")
    endif()
  endforeach(source_file)
  # Complement list of translation units with the name of ub
  set(${SOURCE_VARIABLE_NAME} ${${SOURCE_VARIABLE_NAME}} ${unit_build_file} PARENT_SCOPE)
endfunction(enable_unity_build)

include_directories(
  ./
  )

set(TESTER_CSRCS
  tester.cpp
  syscalls.c
  assert.c
  system_stm32f4xx.c
  stm32f4xx_adc.c
  stm32f4xx_can.c
  stm32f4xx_crc.c
  stm32f4xx_cryp_aes.c
  stm32f4xx_cryp.c
  stm32f4xx_cryp_des.c
  stm32f4xx_cryp_tdes.c
  stm32f4xx_dac.c
  stm32f4xx_dbgmcu.c
  stm32f4xx_dcmi.c
  stm32f4xx_dma2d.c
  stm32f4xx_dma.c
  stm32f4xx_exti.c
  stm32f4xx_flash.c
  stm32f4xx_fsmc.c
  stm32f4xx_gpio.c
  stm32f4xx_hash.c
  stm32f4xx_hash_md5.c
  stm32f4xx_hash_sha1.c
  stm32f4xx_i2c.c
  stm32f4xx_iwdg.c
  stm32f4xx_ltdc.c
  stm32f4xx_pwr.c
  stm32f4xx_rcc.c
  stm32f4xx_rng.c
  stm32f4xx_rtc.c
  stm32f4xx_sai.c
  stm32f4xx_sdio.c
  stm32f4xx_spi.c
  stm32f4xx_syscfg.c
  stm32f4xx_tim.c
  stm32f4xx_usart.c
  stm32f4xx_wwdg.c
  misc.c
  )

set(MAIN_CSRCS
  main.cpp
  timer.cpp
  fpga_comm.c
  sdio.c
  sdcard.c
  msd.cpp
  fat.cpp
  syscalls.c
  cppsupport.cpp
  assert.c
  system_stm32f4xx.c
  stm32f4xx_adc.c
  stm32f4xx_can.c
  stm32f4xx_crc.c
  stm32f4xx_cryp_aes.c
  stm32f4xx_cryp.c
  stm32f4xx_cryp_des.c
  stm32f4xx_cryp_tdes.c
  stm32f4xx_dac.c
  stm32f4xx_dbgmcu.c
  stm32f4xx_dcmi.c
  stm32f4xx_dma2d.c
  stm32f4xx_dma.c
  stm32f4xx_exti.c
  stm32f4xx_flash.c
  stm32f4xx_fsmc.c
  stm32f4xx_gpio.c
  stm32f4xx_hash.c
  stm32f4xx_hash_md5.c
  stm32f4xx_hash_sha1.c
  stm32f4xx_i2c.c
  stm32f4xx_iwdg.c
  stm32f4xx_ltdc.c
  stm32f4xx_pwr.c
  stm32f4xx_rcc.c
  stm32f4xx_rng.c
  stm32f4xx_rtc.c
  stm32f4xx_sai.c
  stm32f4xx_sdio.c
  stm32f4xx_spi.c
  stm32f4xx_syscfg.c
  stm32f4xx_tim.c
  stm32f4xx_usart.c
  stm32f4xx_wwdg.c
  misc.c
  )

#enable_unity_build(ub TESTER_CSRCS)
#enable_unity_build(ub MAIN_CSRCS)

enable_language(ASM)

add_executable(tester
  startup_stm32f40xx.s
  ${TESTER_CSRCS}
  )

add_executable(main
  startup_stm32f40xx.s
  ${MAIN_CSRCS}
  )

set_source_files_properties(startup_stm32f10x_md.c PROPERTIES
  COMPILE_FLAGS "-fno-builtin")

set_target_properties(main PROPERTIES
  LINK_DEPENDS "${STM32_SOURCE_DIR}/link.ld"
  LINK_FLAGS "-T \"${STM32_SOURCE_DIR}/link.ld\" -nostartfiles -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -O2 -Wl,--gc-section")

objcopy_file(main)

set_target_properties(tester PROPERTIES
  LINK_DEPENDS "${STM32_SOURCE_DIR}/link.ld"
  LINK_FLAGS "-T \"${STM32_SOURCE_DIR}/link.ld\" -nostartfiles -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -O2 -Wl,--gc-section")

objcopy_file(tester)

#add_custom_target(flash openocd -f ${STM32_SOURCE_DIR}/openocd.cfg
#                  DEPENDS ${FO})
